deploy-clientapi/dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: client-api-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/server-alias: client-api-dashboard-dev.canaryis.com
spec:
  rules:
  - host: "client-api-dashboard-k8s-dev.canaryis.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: client-api-dashboard
          servicePort: http
  tls:
  - hosts:
    - client-api-dashboard-k8s-dev.canaryis.com
    secretName: star-canaryis-com-cert
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: client-api-internal
  annotations:
    kubernetes.io/ingress.class: nginx-internal
    nginx.ingress.kubernetes.io/server-alias: client-api-internal-dev.canaryis.com
spec:
  rules:
  - host: "client-api-internal-k8s-dev.canaryis.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: client-api-internal
          servicePort: http
  tls:
  - hosts:
    - client-api-internal-k8s-dev.canaryis.com
    secretName: star-canaryis-com-cert
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: client-api-external
  annotations:
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/server-alias: client-api-external-dev.canaryis.com
spec:
  rules:
  - host: "client-api-external-k8s-dev.canaryis.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: client-api-external
          servicePort: http
  tls:
  - hosts:
    - client-api-external-k8s-dev.canaryis.com
    secretName: star-canaryis-com-cert
